--- a/index.html
+++ b/index.html
@@ -3,18 +3,19 @@
 <head>
   <meta charset="UTF-8">
   <meta name="viewport" content="width=device-width, initial-scale=1.0">
-  <title>Pack de Scripts TikTok/Reels pour Petites Entreprises</title>
+  <title>Pack de Scripts TikTok & Reels</title>
   <link href="https://cdn.jsdelivr.net/npm/tailwindcss@2.2.19/dist/tailwind.min.css" rel="stylesheet">
 </head>
 <body class="bg-gray-50 text-gray-800">
   <header class="bg-indigo-600 text-white py-8">
     <div class="max-w-4xl mx-auto text-center">
       <h1 class="text-4xl font-bold">🚀 Pack de Scripts TikTok & Reels</h1>
-      <p class="text-xl mt-2">40 scripts prêts à l'emploi pour booster la visibilité des petites entreprises</p>
+      <p class="text-xl mt-2">50 scripts prêts à l'emploi pour booster la visibilité des petites entreprises</p>
     </div>
   </header>
 
   <main class="max-w-4xl mx-auto px-6 py-12">
+    <!-- Section Avantages -->
     <section class="text-center mb-12">
       <h2 class="text-3xl font-semibold mb-4">Pourquoi ce pack ?</h2>
       <div class="grid grid-cols-1 md:grid-cols-3 gap-6">
@@ -33,16 +34,22 @@
       </div>
     </section>
 
+    <!-- Section Contenu du pack -->
     <section class="text-center mb-12">
       <h2 class="text-3xl font-semibold mb-4">Ce que vous obtenez</h2>
-      <p class="mb-6">✅ 40 scripts TikTok/Reels classés par thème<br>
+      <p class="mb-6">✅ 50 scripts TikTok/Reels classés par thème<br>
          ✅ 10 accroches virales prêtes à l'emploi<br>
          ✅ Guide PDF avec conseils d'utilisation</p>
-      <a href="https://votre-lien-kofi-ou-gumroad.com" class="inline-block bg-indigo-600 text-white px-8 py-3 rounded-2xl text-lg font-semibold hover:bg-indigo-700 transition">
+      <a href="https://ko-fi.com/votre-lien" class="inline-block bg-indigo-600 text-white px-8 py-3 rounded-2xl text-lg font-semibold hover:bg-indigo-700 transition mb-4">
         Acheter maintenant – 9€
+      </a>
+      <br>
+      <a href="pack-tiktok.pdf" download class="inline-block bg-green-600 text-white px-8 py-3 rounded-2xl text-lg font-semibold hover:bg-green-700 transition">
+        Télécharger le pack
       </a>
     </section>
 
+    <!-- Section Témoignage -->
     <section class="text-center mb-12">
       <h2 class="text-3xl font-semibold mb-4">Ils en parlent</h2>
       <div class="max-w-2xl mx-auto bg-white rounded-2xl shadow p-6">
@@ -53,7 +60,7 @@
   </main>
 
   <footer class="bg-gray-100 text-center py-6">
-    <p>&copy; 2025 Luka — Tous droits réservés.</p>
+    <p>&copy; 2024 luka — Tous droits réservés.</p>
   </footer>
 </body>
 </html>
