--- a/index.html
+++ b/index.html
@@ -44,7 +44,7 @@
         Acheter maintenant – 9€
       </a>
       <br>
-      <a href="pack-tiktok.pdf" download class="inline-block bg-green-600 text-white px-8 py-3 rounded-2xl text-lg font-semibold hover:bg-green-700 transition">
+      <a href="Prompts_tiktok_reels.pdf" download class="inline-block bg-green-600 text-white px-8 py-3 rounded-2xl text-lg font-semibold hover:bg-green-700 transition">
         Télécharger le pack
       </a>
     </section>
@@ -60,7 +60,8 @@
   </main>
 
   <footer class="bg-gray-100 text-center py-6">
-    <p>&copy; 2024 luka — Tous droits réservés.</p>
+    <p>&copy; 2025 luka — Tous droits réservés.</p>
   </footer>
 </body>
 </html>
+
