--- a/index.html
+++ b/index.html
@@ -40,7 +40,7 @@
       <p class="mb-6">✅ 40 scripts TikTok/Reels classés par thème<br>
          ✅ 10 accroches virales prêtes à l'emploi<br>
          ✅ Guide PDF avec conseils d'utilisation</p>
-      <a href="https://ko-fi.com/votre-lien" class="inline-block bg-indigo-600 text-white px-8 py-3 rounded-2xl text-lg font-semibold hover:bg-indigo-700 transition mb-4">
+      <a href="https://ko-fi.com/luka1308" class="inline-block bg-indigo-600 text-white px-8 py-3 rounded-2xl text-lg font-semibold hover:bg-indigo-700 transition mb-4">
         Acheter maintenant – 9€
       </a>
       <br>
@@ -64,5 +64,6 @@
   </footer>
 </body>
 </html>
+
 
 
