--- a/index.html
+++ b/index.html
@@ -40,12 +40,10 @@
       <p class="mb-6">✅ 40 scripts TikTok/Reels classés par thème<br>
          ✅ 10 accroches virales prêtes à l'emploi<br>
          ✅ Guide PDF avec conseils d'utilisation</p>
-      <a href="https://ko-fi.com/luka1308" class="inline-block bg-indigo-600 text-white px-8 py-3 rounded-2xl text-lg font-semibold hover:bg-indigo-700 transition mb-4">
+      <a href="https://ko-fi.com/s/cdd583281b" class="inline-block bg-indigo-600 text-white px-8 py-3 rounded-2xl text-lg font-semibold hover:bg-indigo-700 transition mb-4">
         Acheter maintenant – 9€
       </a>
-      <br>
-      <a href="Prompts_tiktok_reels.pdf" download class="inline-block bg-green-600 text-white px-8 py-3 rounded-2xl text-lg font-semibold hover:bg-green-700 transition">
-        Télécharger le pack
+      
       </a>
     </section>
 
